# INF584-Project

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
resources/shaders/: commonObjects.vert  depthWrite.frag  fullScreenQuad.vert  gbuffer.frag  gbuffer.glsl  gbuffer.vert  gbufferbak.frag  lighting.glsl  resolve.frag  ssr.frag  ssrDraw.frag  vertexDefs.glsl
src/: glErrorHandler.cpp  main.cpp
src/resources/: Cache.cpp  FileUtils.cpp  FileUtils.hpp  Framebuffer.hpp  InstanceSet.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  Query.hpp  Renderbuffer.hpp  Shader.cpp  Texture.hpp  TextureFormats.hpp  UniformBuffer.hpp  bufferUtils.hpp
src/scene/: Camera.cpp  Camera.hpp  GBuffer.cpp  GBuffer.hpp  ImGuiS.cpp  Lighting.cpp  Lighting.hpp  SSR.cpp  SSR.hpp  Scene.cpp  Scene.hpp  meshUtils.cpp  meshUtils.hpp
src/util/: array_view.hpp  choice.hpp  concepts.hpp  grid.natvis  make_flags.hpp  range.hpp  staticPow.hpp
src/wrappers/: glException.hpp  glParamFromType.hpp
src/wrappers/glfw/: Monitor.hpp  Window.hpp
